KSP-186/KSP-187 basket/basket fix text-wrap

--- a/components/CheckoutProductCard/sttyle.module.scss
+++ b/components/CheckoutProductCard/sttyle.module.scss
@@ -32,7 +32,7 @@
             font-weight: 500;
             line-height: 24px;
             white-space: nowrap;
-            text-wrap: normal;
+            text-wrap: pretty;
         }
 
         .title_buttons {
